--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,8 @@
     justify-content: center;
   }
 }
+
+/* Custom styles for Footer component */
+.shadow-text {
+  text-shadow: 2px 2px 0px #0c1739, -2px -2px 0px #0c1739, -2px 2px 0px #0c1739, 2px -2px 0px #0c1739;
+}
